# AIML4OS_WP11

./: README.md  README_INITIAL.md  pyproject.toml  requirements.txt
R/: README.md
doc/: data_layout.md
init/: init.sh  mount_storage.bash
python/: README.md  README_INITIAL.md  console_logs_10_10_2025.docx  data_sampling.py  main_sampling.py  parameter.py  requrements.txt  test.ipynb  training_all_models_one.py  training_all_models_one_new_features.py  training_all_models_one_new_features_shap.py  validation.py
python/shap/: shap_importance_LightGBM.csv  shap_importance_LightGBM.xlsx  ~$shap_importance_LightGBM.xlsx
simulate/: README.md
